--- a/practice.html
+++ b/practice.html
@@ -136,18 +136,22 @@
     const tableCounts = {};
     let todayLineChart, activityLineChart, todayPieChart, weekdayBarChart, hourlyBarChart, movingAvgLineChart;
 
-    // --- タイムスタンプ処理（文字列も対応） ---
-    function toDateFromTimestamp(maybeTs) {
-      if (!maybeTs) return null;
-      if (typeof maybeTs.toDate === "function") return maybeTs.toDate();
-      if (maybeTs instanceof Date) return maybeTs;
-      return new Date(maybeTs);
+    // --- 文字列 or Timestamp に対応した安全な変換 ---
+    function toDateFromTimestamp(value) {
+      if (!value) return null;
+      if (typeof value.toDate === "function") return value.toDate();
+      if (typeof value === "string") {
+        const d = new Date(value);
+        if (!isNaN(d.getTime())) return d;
+      }
+      if (value instanceof Date) return value;
+      return null;
     }
 
     function formatTimestamp(isoString) {
       if (!isoString) return "ー";
       const date = new Date(isoString);
-      const options = { timeZone:"Asia/Tokyo", year:"numeric", month:"2-digit", day:"2-digit", hour:"2-digit", minute:"2-digit" };
+      const options = { timeZone: "Asia/Tokyo", year:"numeric", month:"2-digit", day:"2-digit", hour:"2-digit", minute:"2-digit" };
       return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g,"-").replace(",","");
     }
 
@@ -157,66 +161,62 @@
       const now = new Date();
       const diffMs = now - start;
       if (diffMs < 0) return "";
-      const minutes = Math.floor(diffMs/60000);
-      const hours = Math.floor(minutes/60);
+      const minutes = Math.floor(diffMs / 60000);
+      const hours = Math.floor(minutes / 60);
       const remainingMinutes = minutes % 60;
-      return hours>0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
+      return hours > 0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
     }
 
     function updateTableDisplays() {
-      Object.keys(tableCounts).forEach(tableNum=>{
+      Object.keys(tableCounts).forEach(tableNum => {
         const t = tableCounts[tableNum];
-        const currentCount = (t.enter||0) - (t.exit||0);
-        const timeToShow = currentCount>0?t.lastEnterTime:null;
-        const status = currentCount>0?"利用中":"空席";
-        const timeText = timeToShow?formatTimestamp(timeToShow):"ー";
-        const elapsed = currentCount>0?`｜${calculateElapsedTime(timeToShow)}`:"";
+        const currentCount = (t.enter || 0) - (t.exit || 0);
+        const timeToShow = currentCount > 0 ? t.lastEnterTime : null;
+        const status = currentCount > 0 ? "利用中" : "空席";
+        const timeText = timeToShow ? formatTimestamp(timeToShow) : "ー";
+        const elapsed = currentCount > 0 ? `｜${calculateElapsedTime(timeToShow)}` : "";
         const element = document.getElementById(`table${tableNum}-status`);
-        if(element){
-          element.textContent=`テーブル${tableNum}: ${status}（${timeText}${elapsed}）`;
-        }
+        if (element) element.textContent = `テーブル${tableNum}: ${status}（${timeText}${elapsed}）`;
       });
     }
 
-    // --- 来訪カウントとテーブル更新 ---
-    function countVisitorsAndTables(snapshot){
-      let entries=0, exits=0, waiting=0;
-      for(let i=1;i<=14;i++){
-        if(!tableCounts[i.toString()]) tableCounts[i.toString]={enter:0, exit:0, lastEnterTime:null};
-        else { tableCounts[i.toString()].enter=0; tableCounts[i.toString()].exit=0; }
+    function countVisitorsAndTables(snapshot) {
+      let entries = 0, exits = 0, waiting = 0;
+
+      for (let i = 1; i <= 14; i++) {
+        if (!tableCounts[i]) tableCounts[i] = { enter:0, exit:0, lastEnterTime:null };
+        else { tableCounts[i].enter=0; tableCounts[i].exit=0; tableCounts[i].lastEnterTime=tableCounts[i].lastEnterTime || null; }
       }
 
-      snapshot.forEach(doc=>{
+      snapshot.forEach(doc => {
         const data = doc.data();
-        if(!data||!data.type) return;
+        if (!data || !data.type) return;
         const type = data.type;
         const table = data.table;
         const ts = toDateFromTimestamp(data.timestamp);
 
-        if(type==="enter") entries++;
-        if(type==="exit") exits++;
-        if(type==="wait") waiting++;
+        if (type==="enter") entries++;
+        if (type==="exit") exits++;
+        if (type==="wait") waiting++;
 
-        if(table!==undefined && table!==null){
+        if (table !== undefined && ts) {
           const key = String(table);
-          if(!tableCounts[key]) tableCounts[key]={enter:0, exit:0, lastEnterTime:null};
-          if(type==="enter"){
-            tableCounts[key].enter=(tableCounts[key].enter||0)+1;
-            const prev = tableCounts[key].lastEnterTime?toDateFromTimestamp(tableCounts[key].lastEnterTime):null;
-            if(!prev||(ts && ts>prev)) tableCounts[key].lastEnterTime=ts?ts.toISOString():tableCounts[key].lastEnterTime;
+          if (!tableCounts[key]) tableCounts[key]={ enter:0, exit:0, lastEnterTime:null };
+          if (type==="enter") {
+            tableCounts[key].enter = (tableCounts[key].enter||0)+1;
+            const prev = tableCounts[key].lastEnterTime ? toDateFromTimestamp(tableCounts[key].lastEnterTime) : null;
+            if (!prev || ts > prev) tableCounts[key].lastEnterTime = ts.toISOString();
           }
-          if(type==="exit") tableCounts[key].exit=(tableCounts[key].exit||0)+1;
+          if (type==="exit") tableCounts[key].exit = (tableCounts[key].exit||0)+1;
         }
       });
 
-      // 表示更新
       document.getElementById("count").textContent = Math.max(0, entries-exits);
       document.getElementById("entries").textContent = entries;
       document.getElementById("exits").textContent = exits;
       document.getElementById("waitingCount").textContent = waiting;
 
-      // 円グラフ更新
-      if(todayPieChart && todayPieChart.data && todayPieChart.data.datasets && todayPieChart.data.datasets[0]){
+      if (todayPieChart && todayPieChart.data && todayPieChart.data.datasets && todayPieChart.data.datasets[0]) {
         todayPieChart.data.datasets[0].data = [entries, exits];
         todayPieChart.update();
       }
@@ -224,53 +224,120 @@
       updateTableDisplays();
     }
 
-    // --- 本日の時間別折れ線（入店のみ） ---
-    function updateTodayLine(snapshot){
+    function updateTodayLine(snapshot) {
       const hours = Array(24).fill(0);
-      snapshot.forEach(doc=>{
+      snapshot.forEach(doc => {
         const data = doc.data();
-        if(!data||data.type!=="enter") return;
-        const ts = toDateFromTimestamp(data.timestamp)||new Date();
+        if (!data || data.type!=="enter") return;
+        const ts = toDateFromTimestamp(data.timestamp);
+        if (!ts) return;
         const h = ts.getHours();
-        hours[h]=(hours[h]||0)+1;
+        hours[h] = (hours[h]||0)+1;
       });
-      if(todayLineChart && todayLineChart.data && todayLineChart.data.datasets){
+      if (todayLineChart && todayLineChart.data && todayLineChart.data.datasets) {
         todayLineChart.data.datasets[0].data = hours;
         todayLineChart.update();
       }
     }
 
-    // --- 以下既存の過去30日・移動平均・曜日別・時間帯別処理はそのまま --- 
-    async function loadPast30DaysAndMovingAvg(){ /* 既存コード */ }
-    async function loadWeekdayStats(){ /* 既存コード */ }
-    async function loadHourlyAverages(){ /* 既存コード */ }
-    function initializeCharts(){ /* 既存コード */ }
+    async function loadPast30DaysAndMovingAvg() {
+      const snapshot = await db.collection("logs").get();
+      const today = new Date(); today.setHours(0,0,0,0);
 
-    window.onload = ()=>{
+      const counts30 = Array(30).fill(0);
+      const labels = [];
+      for(let i=29;i>=0;i--){ const d = new Date(today); d.setDate(today.getDate()-i); labels.push(`${d.getMonth()+1}/${d.getDate()}`); }
+
+      snapshot.forEach(doc=>{
+        const data=doc.data();
+        if(!data||data.type!=="enter") return;
+        const ts = toDateFromTimestamp(data.timestamp);
+        if(!ts) return;
+        const dayStart=new Date(ts); dayStart.setHours(0,0,0,0);
+        const diff=Math.floor((today-dayStart)/(1000*60*60*24));
+        if(diff>=0 && diff<30) counts30[29-diff]=(counts30[29-diff]||0)+1;
+      });
+
+      if(activityLineChart){ activityLineChart.data.labels=labels; activityLineChart.data.datasets[0].data=counts30; activityLineChart.update(); }
+
+      const moving = counts30.map((_, idx, arr)=>{
+        const start=Math.max(0,idx-6);
+        const slice=arr.slice(start, idx+1);
+        const sum=slice.reduce((a,b)=>a+b,0);
+        return +(sum/slice.length).toFixed(2);
+      });
+
+      if(movingAvgLineChart){ movingAvgLineChart.data.labels=labels; movingAvgLineChart.data.datasets[0].data=moving; movingAvgLineChart.update(); }
+    }
+
+    async function loadWeekdayStats() {
+      const snapshot = await db.collection("logs").get();
+      const dayCounts = Array(7).fill(0);
+      const dayDays = {}; for(let i=0;i<7;i++) dayDays[i]=new Set();
+
+      snapshot.forEach(doc=>{
+        const data=doc.data(); if(!data||data.type!=="enter") return;
+        const ts=toDateFromTimestamp(data.timestamp); if(!ts) return;
+        const w=ts.getDay();
+        dayCounts[w]=(dayCounts[w]||0)+1;
+        dayDays[w].add(ts.toISOString().slice(0,10));
+      });
+
+      const averages=dayCounts.map((count,w)=>{ const days=dayDays[w].size||1; return +(count/days).toFixed(2); });
+      if(weekdayBarChart){ weekdayBarChart.data.datasets[0].data=averages; weekdayBarChart.update(); }
+    }
+
+    async function loadHourlyAverages() {
+      const snapshot = await db.collection("logs").get();
+      const countsPerHour = Array(24).fill(0);
+      const daySet = new Set();
+
+      snapshot.forEach(doc=>{
+        const data=doc.data(); if(!data||data.type!=="enter") return;
+        const ts = toDateFromTimestamp(data.timestamp); if(!ts) return;
+        const hour=ts.getHours();
+        countsPerHour[hour]=(countsPerHour[hour]||0)+1;
+        daySet.add(ts.toISOString().slice(0,10));
+      });
+
+      const numDays = Math.max(1, daySet.size);
+      const averages = countsPerHour.map(c=>+(c/numDays).toFixed(2));
+      if(hourlyBarChart){ hourlyBarChart.data.datasets[0].data=averages; hourlyBarChart.update(); }
+    }
+
+    function initializeCharts() {
+      const ctx1=document.getElementById("todayLineChart").getContext("2d");
+      todayLineChart=new Chart(ctx1,{ type:"line", data:{ labels:Array.from({length:24},(_,i)=>`${i}時`), datasets:[{ label:"入店数", data:Array(24).fill(0), borderColor:"#007bff", tension:0.3, fill:false, pointRadius:2 }]}, options:{ responsive:true, maintainAspectRatio:false } });
+
+      const ctx2=document.getElementById("activityLineChart").getContext("2d");
+      activityLineChart=new Chart(ctx2,{ type:"line", data:{ labels:[], datasets:[{ label:"日別入店数", data:[], borderColor:"#28a745", tension:0.2, fill:true, backgroundColor:"rgba(40,167,69,0.08)"}]}, options:{ responsive:true, maintainAspectRatio:false }});
+
+      const ctx3=document.getElementById("todayPieChart").getContext("2d");
+      todayPieChart=new Chart(ctx3,{ type:"pie", data:{ labels:["入店","退店"], datasets:[{ data:[0,0], backgroundColor:["#007bff","#dc3545"] }] }, options:{ responsive:true, maintainAspectRatio:false }});
+
+      const ctx4=document.getElementById("weekdayBarChart").getContext("2d");
+      weekdayBarChart=new Chart(ctx4,{ type:"bar", data:{ labels:["日","月","火","水","木","金","土"], datasets:[{ label:"平均入店数", data:Array(7).fill(0), backgroundColor:"#17a2b8" }] }, options:{ responsive:true, maintainAspectRatio:false } });
+
+      const ctx5=document.getElementById("hourlyBarChart").getContext("2d");
+      hourlyBarChart=new Chart(ctx5,{ type:"bar", data:{ labels:Array.from({length:24},(_,i)=>`${i}時`), datasets:[{ label:"時間帯別平均入店数", data:Array(24).fill(0), backgroundColor:"#ffc107" }] }, options:{ responsive:true, maintainAspectRatio:false } });
+
+      const ctx6=document.getElementById("movingAvgLineChart").getContext("2d");
+      movingAvgLineChart=new Chart(ctx6,{ type:"line", data:{ labels:[], datasets:[{ label:"7日移動平均", data:[], borderColor:"#6f42c1", tension:0.3, fill:false }] }, options:{ responsive:true, maintainAspectRatio:false } });
+    }
+
+    function startRealtimeListeners() {
+      db.collection("logs").orderBy("timestamp").onSnapshot(snapshot=>{
+        countVisitorsAndTables(snapshot);
+        updateTodayLine(snapshot);
+      });
+    }
+
+    window.onload = function(){
       initializeCharts();
-
-      const today = new Date();
-      today.setHours(0,0,0,0);
-      const todayTimestamp = firebase.firestore.Timestamp.fromDate(today);
-
-      db.collection("logs")
-        .where("timestamp", ">=", todayTimestamp)
-        .onSnapshot(snapshot=>{
-          countVisitorsAndTables(snapshot);
-          updateTodayLine(snapshot);
-        }, err=>{ console.error("今日のログ監視でエラー:", err); });
-
-      loadPast30DaysAndMovingAvg().catch(e=>console.error(e));
-      loadWeekdayStats().catch(e=>console.error(e));
-      loadHourlyAverages().catch(e=>console.error(e));
-
-      setInterval(updateTableDisplays,1000);
-
-      const menuButton=document.querySelector(".menu-button");
-      const drawer=document.querySelector(".drawer");
-      if(menuButton && drawer){
-        menuButton.addEventListener("click",()=>{ drawer.classList.toggle("open"); });
-      }
+      startRealtimeListeners();
+      loadPast30DaysAndMovingAvg();
+      loadWeekdayStats();
+      loadHourlyAverages();
     };
   </script>
 </body>
